--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/"><span>Web</span> <span>Studio</span></a>
+            <a href="./index.html"><span>Web</span> <span>Studio</span></a>
     
             <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="/">Контакты</a></li>
             </ul>
         </nav>
@@ -24,13 +26,65 @@
 
     <main>
 
-        <ul>
-            <li><a href="#">Все</a></li>
-            <li><a href="#">Веб-сайты</a></li>
-            <li><a href="#">Приложения</a></li>
-            <li><a href="#">Дизайн</a></li>
-            <li><a href="#">Маркетинг</a></li>
-        </ul>
+        <!-- КНОПКИ -->
+        <section>
+            <button type="button">Все</button>
+            <button type="button">Веб-сайты</button>
+            <button type="button">Приложения</button>
+            <button type="button">Дизайн</button>
+            <button type="button">Маркетинг</button>
+        </section>
+
+        <!--  Блок картинок -->
+        <section>
+            <ul>
+                <li>
+                    <img src="./photoPortfolio/img.jpg" alt="фото сайта" width="370" height="294">
+                    <h4>Технокряк</h4>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-2.jpg" alt="постер дизайн" width="370" height="294">
+                    <h4>Постер New Orlean vs Golden Star</h4>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-3.jpg" alt="Приложения ресторана" width="370" height="294">
+                    <h4>Ресторан Seafood</h4>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-4.jpg" alt="фото наушников" width="370" height="294">
+                    <h4>Проект Prime</h4>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-5.jpg" alt="коробки" width="370" height="294">
+                    <h4>Проект Boxes</h4>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-6.jpg" alt="Фото Веб-сайт" width="370" height="294">
+                    <h4>Inspiration has no Borders</h4>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-7.jpg" alt="книга" width="370" height="294">
+                    <h4>Издание Limited Edition</h4>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-8.jpg" alt="бирка" width="370" height="294">
+                    <h4>Проект LAB</h4>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./photoPortfolio/img-9.jpg" alt="ноутбук" width="370" height="294">
+                    <h4>Growing Business</h4>
+                    <p>Приложение</p>
+                </li>
+            </ul>
+        </section>
 
     </main>
 
