--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
             <a href="/"><span>Web</span> <span>Studio</span></a>
 
             <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="/">Контакты</a></li>
             </ul>
         </nav>
