--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -30,7 +33,7 @@
         <!-- центральный баннер -->
         <div class="hero">
             <section>
-                <h1 class="hero-text">Эффективные решения <br /> для вашего бизнеса</h1>
+                <h1 class="hero-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <form>
                     <button type="button" class="hero-button">
                         Заказать услугу
@@ -43,19 +46,19 @@
         <section>
             <ul>
                 <li>
-                    <h3 class="best">Внимание к деталям</h3>
+                    <h3 class="best">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="best-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="best">Пунктуальность</h3>
+                    <h3 class="best">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="best-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="best">Планирование</h3>
+                    <h3 class="best">ПЛАНИРОВАНИЕ</h3>
                     <p class="best-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="best">Современные технологии</h3>
+                    <h3 class="best">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="best-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -111,10 +114,9 @@
             <li>
                 <a class="addres"
                     href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk">
-                    <address>
+                    
                         м. Київ, пр-т Лесі Українки. 26
-                    </address>
-                </a>
+                 </a>
             </li>
             <li>
                 <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
