--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,16 @@
 
         <!-- КНОПКИ -->
         <section>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-        </section>
+            <ul>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+           
 
-        <!--  Блок картинок -->
-        <section>
+            <!--  Блок картинок -->
             <ul>
                 <li>
                     <img src="./photoPortfolio/img.jpg" alt="фото сайта" width="370" height="294">
